--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://exavolt.github.io/'
 languageCode = 'en-us'
 title = "exavolt's rambling"
 theme = 'hugo-PaperMod'
