--- a/hugo.yaml
+++ b/hugo.yaml
@@ -15,3 +15,11 @@ markup:
     lineNos: false
     # noClasses: false
     style: github-dark
+
+
+menu:
+  main:
+    - identifier: github
+      name: My GitHub
+      url: https://github.com/exavolt
+      weight: 30
