Update home info

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -25,4 +25,5 @@ params:
   homeInfoParams:
     Title: "exavolt's personal notes"
     Content: |
-      Welcome to exavolt's personal notes
+      Welcome to exavolt's personal notes. I use this blog to share some of my
+      notes publicly.
