--- a/hugo.yaml
+++ b/hugo.yaml
@@ -23,9 +23,13 @@ markup:
 menu:
   main:
     - identifier: github
-      name: My GitHub
+      name: GitHub
       url: https://github.com/exavolt
-      weight: 30
+      weight: 10
+    - identifier: twitter
+      name: X
+      url: https://x.com/exavolt
+      weight: 11
 
 params:
   assets:
